# rakkun-table

./: .gitignore  CMakeLists.txt  README.md  protocol_spec.md
.github/workflows/: apply-fix.sh  build-apk.yml  cmake-multi-platform.yml  release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_interface.cpp  renderer.cpp  renderer.h  video_decoder.cpp  video_decoder.h
android/app/src/main/java/com/graphictablet/: DiscoveryService.kt  MainActivity.kt
android/app/src/main/java/com/penstream/app/: ConnectionManager.kt  SettingsActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
android/gradle/: build.gradle
scripts/: build_android.bat  build_server.bat
server/: CMakeLists.txt  README-development.md  README.md  discovery.py  server.py
server/src/: main.cpp
server/src/capture/: dxgi_capturer.cpp  dxgi_capturer.h  gdi_capturer.cpp  gdi_capturer.h
server/src/encode/: mf_encoder.cpp  mf_encoder.h  nvenc_encoder.cpp  nvenc_encoder.h
server/src/network/: packet_builder.cpp  packet_builder.h  udp_transport.cpp  udp_transport.h
server/tests/: packet_test.cpp
